# claude-plugins

./: .gitignore  AI_NATIVE_PRODUCT_TEAM.md  CHANGELOG.md  CLAUDE.md  LICENSE  Plan.md  README.md  SPEC.md  downloader.py  transcriber.py
plugins/linked-insight/: .gitignore  CLAUDE.md  LESSONS.md  PLAN.md  README.md  pyproject.toml
plugins/linked-insight/.claude-plugin/: plugin.json
plugins/linked-insight/commands/: linkedin-analyze.md  linkedin-delete.md  linkedin-save.md  linkedin-search.md  linkedin-stats.md
plugins/linked-insight/data/: metadata.json
plugins/linked-insight/data/posts/:  Figma 킬러앱 Pencil이 출시.md  99%의 작업은 모델 안에서 이루어진다.md  AI 에이전트 6가지 트렌드 2026.md  AI 코딩 10가지 원칙 - Peter Steinberger.md  AI가 자꾸 까먹어서 답답하셨죠?.md  AI와 함께 신체를 다시 만들고 있습니다.md  AI의 비틀즈와 롤링스톤즈가 예고하는 AGI 전야.md  Agentic Coding 도구 동향 2024-2026.md  CC headless mode.md  CS 담당자 1명으로 10배 성장을 준비합니다.md  Claude Code -> oh my opencode -> Pencil로 넘어갑니다.md  Claude Code Agent Teams 단축키부터 실전 세팅까지.md  Claude Code Tasks 추적 앱.md  Claude Code Task가 제시한 AI-native 엔지니어의 조건.md  Claude Code를 10개 이상 동시에 돌리는 방법.md  Clawdbot이 맥 미니를 품절시킨 주말.md  Context7, 단순 MCP 연결 말고 스킬, 서브에이전트로 컨텍스트를 절약하세요.md  Figma 킬러앱 Pencil이 출시.md  Ghostty vs iTerm2 터미널 비교.md  Google Auto RAG Eval - 엔터프라이즈 AX와 AgentDog.md  OpenAI Multi-Agent Workflows 해커톤 참여 후기.md  SaaS 주식은 반토막, AI 스타트업은 수십 배 멀티플.md  Skillthon에서 8개의 Claude Code 플러그인.md  attenstion-hook.md  cc 7가지 팁.md  session-wrap 플러그인에 두 개의 스킬을 업데이트.md  (+12 more)
plugins/linked-insight/scripts/: backfill.py  delete.py  embed.py  fetch_post.py  index.py  migrate.py  search.py  shorten_urls.py  stats.py
(+118 files in other folders)
